# nz-retail-forecast

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
api/: app.py
config/: config.yaml
diagnostics/: recommender_audit.md
notebooks/: 01_EDA_and_Insights.ipynb  01_lstm_vs_ridge.ipynb  02_Modelling_Evaluation.ipynb  02_recommender_svd_vs_als.ipynb  04_pca_ablation.ipynb  build_notebook_02.py
src/deep_learning/: __init__.py  compare_dl_vs_classical.py  lstm_model.py  train_dl.py
src/dimensionality/: __init__.py  _utils.py  lda_topics.py  pca_features.py  svd_analysis.py
src/forecasting/: __init__.py  ablation.py  config.py  data.py  evaluate.py  features.py  train.py
src/recommender/: als_model.py  content_based.py  data_loader.py  evaluate.py  popularity_baseline.py  svd_model.py  train_recommender.py
tests/: conftest.py  test_data.py  test_evaluate.py  test_features.py
